--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/biticon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/0a466788e3.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+    <title>Coinverse</title>
   </head>
   <body>
     <div id="root"></div>
